# kong-ai-gateway-hackathon

./: ._cillers-cli  .gitignore  README.md  polytope.yml  requirements.txt
api/: pyproject.toml
api/src/api/: agent.py  conf.py  emotions.py  main.py  memory.py  models.py  routes.py
api/src/api/clients/: couchbase.py  http.py
cillers/couchbase-init-python/src/: main.py
conf/components/kong/: dev.yml
frontend/: .yarnrc.yml  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  config.ts
frontend/src/components/: Chat.tsx  ChatSidebar.tsx  ChatView.tsx  Main.tsx  WelcomeScreen.tsx
frontend/src/rest/: api_client_rest.ts  routes.ts  types.ts
frontend/src/rest/modules/: chat.ts
frontend/src/services/: chatStorage.ts
util/init-couchbase/src/: main.py
util/init-couchbase/src/controllers/: controller_bucket.py  controller_cluster.py
